Added postgresql config